# torno

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp
.github/workflows/: build.yaml
core/: CMakeLists.txt  ranking.h  team.h  tournament.cpp  tournament.h
core/stage/: abstractstage.h  poolstage.h
src/: CMakeLists.txt  main.cpp
src/core/: ranking.cpp  team.cpp
src/core/stage/: abstractstage.cpp  poolstage.cpp
tests/: CMakeLists.txt  ranking_test.cpp
